
The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/).

## [0.13.1] - 2024-04-16: "E Street Fix"

### Fixed

- CLN `v24.02` deprecated the RPC `msatoshi` fields which needed to be
  converted to `amount_msat` instead.  This caused channel candidates
  to not be found ([#189]) (and maybe other problems).  Fixed in
  ([#190]).

### Changed

- The minimum number of network nodes seen before initiating certain
  actions is 800 in the bitcoin network.  ([#173]) changes this
  threshold for the testnet (300) and other networks (10).  The new
  thresholds should allow CLBOSS to act when there are fewer available
  nodes.  The bitcoin limit remains 800.

## [0.13] - 2023-09-08: "Born to Run"

### Added

- Continuous Integration (CI) for pull requests!
- Support string "id" fields in the plugin interface.
- Enable SQLITE3 extended error codes.

### Changed

- Disable compiling debug information by default; if you need this,
  explicitly include `-g` in your `configure` command, like so:
  `./configure CXXFLAGS="-O2 -g"`.  This reduces binary size by 20x.
- Avoid parameters/commands deprecated in Core Lightning 0.11.0.

### Fixed

- Can now handle JSON-RPC amounts in either the old convention
  (string, "msat" suffix) or the post 23.05 convention (json number). ([#157], [#164])
- Fixed non-integer blockheights (testnet) ([#170])
- Upgraded libraries and compiler to fix build. ([#169])


## Prior `ChangeLog` entries [formatting change]

- Support string "id" fields in the plugin interface.
- Disable compiling debug information by default; if you need this, explicitly include `-g` in your `configure` command, like so: `./configure CXXFLAGS="-O2 -g"`.  This reduces binary size by 20x.
- Enable SQLITE3 extended error codes.
- Avoid parameters/commands deprecated in Core Lightning 0.11.0.

0.13A
- Disable `InitialRebalancer`, as it is not based on economic rationality.